test/expected/explain_+co_eq2_rck_b=default-cpp17.out
struct S; explain bool S::operator==(S const&) const = default
              ^
15: error: default operator == is not supported until C++20
